--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <spring-data-jpa.version>1.10.5.RELEASE</spring-data-jpa.version>
         <hibernate-entitymanager.version>5.2.5.Final</hibernate-entitymanager.version>
         <postgresql.version>9.4.1212</postgresql.version>
+        <commons-dbcp2.version>2.1.1</commons-dbcp2.version>
+        <jta.version>1.1</jta.version>
     </properties>
     <packaging>war</packaging>
 
@@ -25,6 +27,7 @@
             <version>${spring-core.version}</version>
         </dependency>
 
+        <!-- WEB -->
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -39,6 +42,7 @@
             <version>${javax.servlet-api.version}</version>
         </dependency>
 
+        <!-- DATABASE -->
         <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -58,6 +62,20 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${commons-dbcp2.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>${jta.version}</version>
         </dependency>
 
     </dependencies>
